Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
             <ul>
                 <li>
                     <label for="name">Nome completo:</label>
-                    <input id="name" type="text">
+                    <input id="name" type="text" name="name">
                 </li>
                 <li>
                     <label for="email">E-mail:</label>
-                    <input id="email" type="email">
+                    <input id="email" type="email" name="email">
                 </li>
                 <li>
                     <label for="tell">Telefone:</label>
-                    <input id="tell" type="number">
+                    <input id="tell" type="text" name="tell">
                 </li>
                 <li>
                     <label for="cpf">CPF:</label>
-                    <input id="cpf" type="number">
+                    <input id="cpf" type="text" name="cpf">
                 </li>
                 <li>
                     <label for="location">Endereço:</label>
-                    <input id="location" type="text">
+                    <input id="location" type="text" name="location">
                 </li>
                 <li>
                     <label for="cep">CEP:</label>
-                    <input id="cep" type="number">
+                    <input id="cep" type="text" name="cep">
                 </li>
             </ul>
             <button>Enviar</button>
@@ -48,6 +48,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="./type.js"></script>
     <script src="./js/jquery.mask.min.js"></script>
-
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_PT.min.js"></script>
 </body>
 </html>
